--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="container-fluid">
         <div class="row bg-menubar">
-            <div class="col-4">LOGO</div>
+            <div class="col-4">LOGO1</div>
             <div class="col-6">NAVIGATION</div>
             <div class="col-2">SEARCH</div>
         </div>
